Use junit5 in indexer